# CreationVille

./: CMakeLists.txt  CMakeLists.txt.user.acfa4de.4.8-pre1  My_linear_cell_complex_incremental_builder.h  README.md  elementVille.cpp  elementVille.h  immeuble.cpp  immeuble.h  lcc_creations.h  lcc_def.h  readme  readme.txt  test.cpp
builds/debug/: CMakeCache.txt  Makefile  MyProject.cbp  cmake_install.cmake  qrc_CGAL.cpp  qrc_File.cpp  qrc_Input.cpp  qrc_Triangulation_2.cpp
builds/debug/.cmake/api/v1/reply/: cache-v2-d5312c765437ffb082dc.json  cmakeFiles-v1-6b1f32d87c9d46349a0b.json  codemodel-v2-00ce68197497cdbae2df.json  codemodel-v2-5477a61fc6ef2b4cdb93.json  index-2021-10-01T12-07-56-0075.json  index-2021-10-01T14-29-35-0196.json  target-CGAL_Qt5_moc_and_resources-Debug-5880880e4c7a8802b7b7.json  target-CGAL_Qt5_moc_and_resources_autogen-Debug-97a409364509fa7d6eb7.json  target-MyExec-Debug-0842411680d743cff3d6.json  target-MyExec-Debug-6979b2c316f77cc0c107.json
builds/debug/CGAL_Qt5_moc_and_resources_autogen/: moc_predefs.h  mocs_compilation.cpp
builds/debug/CGAL_Qt5_moc_and_resources_autogen/M4PFYP4R7R/: moc_qglviewer.cpp
builds/release/: CMakeCache.txt
